# python-google-photos-library-api

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: lint.yaml  pages.yaml  publish.yaml  test.yaml
google_photos_library_api/: api.py  auth.py  exceptions.py  model.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py
