[metadata]
name = google_photos_library_api
version = 0.0.1
description = A python client library for Google Photos Library API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/python-google-photos-library-api
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.11
install_requires =
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
google_photos_library_api = py.typed
